[project]
name = "ddr-local"
description = "Densho Repository Editor"
authors = [
    {name = "Geoffrey Jost", email = "geoffrey.jost@densho.us"}
]
maintainers = [
    {name = "Geoffrey Jost", email="geoffrey.jost@densho.us"},
]
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["Django", "archives"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Framework :: Django",
    "Framework :: Django :: 5.1",
]

dynamic = ["version"]  # see tool.setuptools.dynamic
requires-python = ">=3.11"
dependencies = [
    'django>=4.1.0,<4.2',                 # MIT
    'django-bootstrap-pagination-forked', # MIT
    'redis',                              # MIT
    'celery>=5.2.2,<5.3.0',               # BSD
    'kombu>=5.2.0,<5.3.0',                # New BSD
    'djangorestframework>=3.13.0,<3.14',  # BSD      y
    'drf-yasg>=1.21.0,<1.22',             # BSD
    'pyyaml',
    'uritemplate',
    'gunicorn',                           # MIT
    'sorl-thumbnail',                     # BSD
]

[project.optional-dependencies]
testing = [
    'coverage',
    'pytest',
    'pytest-cov',
    'pytest-django',
]

[project.urls]
Repository = "https://github.com/denshoproject/ddr-local"

[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ['ddrlocal']

[tool.setuptools.dynamic]
version = {file = "VERSION"}
