[project]
name = "ddr-local"
description = "Densho Repository Editor"
authors = [
    {name = "Geoffrey Jost", email = "geoffrey.jost@densho.us"}
]
maintainers = [
    {name = "Geoffrey Jost", email="geoffrey.jost@densho.us"},
]
readme = "README.md"
#license = {file = "LICENSE"}
keywords = ["Django", "archives"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Framework :: Django",
    "Framework :: Django :: 5.1",
]

dynamic = ["version"]  # see tool.setuptools.dynamic
requires-python = ">=3.13"
dependencies = [
    'bpython',
    'django>=6.0,<7.0',                 # MIT
    'django-bootstrap-pagination-forked==1.7.2', # MIT
    'redis==7.4.0',                              # MIT
    'celery==5.5.3',               # BSD
    'kombu==5.5.4',                # New BSD
    'djangorestframework==3.17.1',  # BSD      y
    'drf-yasg==1.21.15',             # BSD
    'pyyaml==6.0.3',
    'uritemplate==4.2.0',
    'gunicorn==26.0.0',                           # MIT
    'sorl-thumbnail==13.0.0',                     # BSD
]

[project.optional-dependencies]
testing = [
    'coverage==7.14.0',
    'pytest==9.0.3',
    'pytest-cov==7.1.0',
    'pytest-django==4.12.0',
]

[project.urls]
Repository = "https://github.com/denshoproject/ddr-local"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ['ddrlocal']

[tool.setuptools.dynamic]
version = {file = "VERSION"}
